[package]
name = "assemblage_broadcast"
description = "Publish-and-Subscribe Service for AssemblageDB"
version = "0.1.0"
authors = ["Frederic Kettelhoit <kettelhoit@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
assemblage-broadcast-integration-tests = []
workers-localhost = []
workers-env-prod = []

[dependencies]
cfg-if = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Headers',
    'Request',
    'Response',
    'ResponseInit',
    'Url',
    'UrlSearchParams',
]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
