[package]
name = "assemblage_db"
description = "Distributed Document/Graph DB for Connected and Overlapping Pages"
license = "AGPL-3.0"
repository = "https://github.com/fkettelhoit/assemblagedb/tree/main/assemblage_db"
version = "0.2.0"
authors = ["Frederic Kettelhoit <kettelhoit@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
assemblage-broadcast-integration-tests = []
workers-localhost = []
workers-env-prod = []

[dependencies]
futures = "0.3"
async-recursion = "0.3"
async-trait = "0.1"
assemblage_kv = { path = "../assemblage_kv" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
tokio = { version = "1.7", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.7", features = ["time", "rt-multi-thread"] }
serde_json = "1.0"
env_logger = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
console_log = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    'RequestInit',
    'Response',
    'Window',
]
