[package]
name = "assemblage_index"
description = "Hyper-Connected DB for Text and Media With Built-In Search Index"
license = "AGPL-3.0"
repository = "https://github.com/fkettelhoit/assemblagedb/tree/main/assemblage_db"
version = "0.1.0"
authors = ["Frederic Kettelhoit <kettelhoit@gmail.com>"]
edition = "2021"

[dependencies]
assemblage_kv = { path = "../assemblage_kv" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "0.8", features = ["v4"] }
