[package]
name = "assemblage_index"
description = "Hyper-Connected DB for Text and Media With Built-In Search Index"
license = "AGPL-3.0"
repository = "https://github.com/fkettelhoit/assemblagedb/tree/main/assemblage_db"
version = "0.1.0"
authors = ["Frederic Kettelhoit <kettelhoit@gmail.com>"]
edition = "2021"

[dependencies]
assemblage_kv = { path = "../assemblage_kv" }
rand = "0.8"
log = "0.4"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.7", features = ["time", "rt", "rt-multi-thread"] }
env_logger = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
console_log = "0.2"
